# pam

./: .cruft.json  .dockerignore  .editorconfig  .gitignore  .pa11yci  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  environment.yml  facility_sampling.ipynb  index.html  linkcheck.json  mkdocs.yaml  mkdocs.yml  objects.inv  parser.ipynb  pyproject.toml  pyproject.toml.rej  requirements.txt  run-tests.sh  setup.py  versions.json
.github/: pull_request_template.md
0.2/: 404.html  index.html  index.md  objects.inv
activity_plans/: index.html
conda.recipe/: meta.yaml
develop/: 404.html  index.html  objects.inv
docs/: activity_plans.md  cli.md  get_involved.md  hooks.py  index.md  installation.md  modelling_policy_impact.md  read_data.md  reference.md
example_data/: example_attributes.xml  example_travel_diaries.csv
examples/: 01_PAM_Getting_Started.ipynb  01_basics.ipynb  01_pam-getting-started.ipynb  02_Example-Create-Population.ipynb  02_Population_Basics.ipynb  02a_tabular_read_write.ipynb  02b_matsim_read_write.ipynb  03_Example_Generate_Random_Population.ipynb  03_PAM-Create-Population.ipynb  03_read_modify_write.ipynb  04_Example-Create-Population-Londinium.ipynb  04_Example_Ingest_NTS_Diaries.ipynb  04_point_sampling.ipynb  05_PAM_Policies_Walk_Through.ipynb  05_activity_plots.ipynb  05_policies_walk_through.ipynb  06_PAM_Complex_Policies.ipynb  06_travel_plots.ipynb  07_PAM_Point_Sampling.ipynb  07_PAM_Simple_Policies.ipynb  07_travel_survey_to_matsim.ipynb  08_PAM_Complex_Policies.ipynb  08_PAM_Population_Activity_Plots.ipynb  08_toy_matsim_population.ipynb  09_PAM_Policy_Stability.ipynb  09_Travel_Plots.ipynb  09_advanced_policies.ipynb  09_pam-geo-sampling.ipynb  10_Advanced_Spatial-Sampling_Demo.ipynb  10_advanced_spatial_sampling.ipynb  11_Advanced_Plan_Rescheduling.ipynb  11_Advanced_Spatial-Sampling_Demo.ipynb  12_Advanced_Adding_Vehicles.ipynb  13_Advanced_Freight_Synthesis.ipynb  14_Advanced_Plan_Cropping.ipynb  14_weighted-facility-sampling_demo.ipynb  15_Advanced_Choice.ipynb  15_advanced_choice_modelling.ipynb  15_reschedule.ipynb  16_advanced_matsim_warmstarting.ipynb  (+21 more)
get_involved/: index.html
installation/: index.html
mkdocs_plugins/: api_generator.py  test_api_generator.py
modelling_policy_impact/: index.html
notebooks/: Example-Create-Population-Londinium.ipynb  Example-Create-Population.ipynb  NTS Population Synthesis Example.ipynb  PAM Policies walk-through.ipynb  PAM-stats.ipynb  PAM_Complex_Policies.ipynb  PAM_Simple_Policies.ipynb  PAM_stability.ipynb  Travel plots.ipynb  dft-diary-read.ipynb  london-workers-classification.ipynb  notebook_smoke_tests.py  pam-geo-sampling.ipynb  pam-getting-started.ipynb  testplan12.xml  vulnerability_probabilities.ipynb  weighted-facility-sampling_demo.ipynb
pam/: __init__.py  activity.py  cli.py  core.py  cropping.py  extract_OD_matrices.py  location.py  modify.py  od_matrices.py  od_matrices_seg.py  parse.py  plot.py  policies.py  population.py  read.py  scoring.py  test_extract_OD_matrices.py  test_od_matrices_seg.py  utils.py  variables.py  vehicle.py  vehicles.py  write.py
read_data/: index.html
requirements/: base.txt  dev.txt  docs.txt  research.txt  tests.txt
resources/: paper.bib  paper.md
scripts/: .coveragerc  code-coverage.sh  notebooks-smoke-test.sh  run_all_notebooks.py
search/: search_index.json
tests/: conftest.py  fixtures.py  simple.csv  test_00_utils.py  test_01_core.py  test_01_core_operations.py  test_01_core_sample_locs.py  test_02_activity.py  test_02_activity_components.py  test_02_activity_fix.py  test_02_activity_plan.py  test_02_activity_trips.py  test_02_activity_validate.py  test_03_read.py  test_03_read_activity_plan.py  test_03_read_challenge.py  test_03_read_matsim.py  test_03_read_travel_diary.py  test_04_household_policies.py  test_05_filters.py  test_05_modifiers.py  test_05_modifiers_AddActivity.py  test_05_modifiers_MoveActivity.py  test_05_modifiers_ReduceSharedActivity.py  test_05_modifiers_RemoveActivity.py  test_05_policies.py  test_05_policies_prebaked.py  test_05_policy_levels.py  test_05_probability_samplers.py  test_06_activity_remove_plan.py  test_08_write.py  (+78 more)
(+894 files in other folders)
